# games-101

./: README.md
assignment-3/: CMakeLists.txt  main.cpp  rasterizer.cpp
assignment-4/: CMakeLists.txt  main.cpp
assignment-5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp
